Card alignment fixed, need to increase image size in them now

--- a/the-website/src/components/Cards.css
+++ b/the-website/src/components/Cards.css
@@ -16,7 +16,7 @@ h1 {
     margin: 0 auto;
 }
 
-.cards_wrapper {
+.cards__wrapper {
     position: relative;
     margin: 50px 0 45px;
 }
